--- a/sass/templates/_questions.sass
+++ b/sass/templates/_questions.sass
@@ -18,7 +18,6 @@
     .learning
         &-form
             &__input
-                max-width: 16.5rem
-                width: 100%
+                width: 16.5rem
             &__button
                 max-width: 16.8125rem
