--- a/sass/templates/_learning-form.sass
+++ b/sass/templates/_learning-form.sass
@@ -16,10 +16,12 @@
         display: flex
         flex-direction: column
         justify-content: center
-        align-items: center
         max-width: 22.375rem
         width: 100%
         margin: auto
+    &-input
+        &-group
+            margin-bottom: 1rem
     &__input
         width: 100%
         text-indent: 1.125rem
@@ -27,6 +29,6 @@
         padding-bottom: 1rem
         border-radius: 5px
         border: none
-        margin-bottom: 1.5rem
+        margin-bottom: 0.5rem
     &__button
         width: 100%
