--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -21,6 +21,10 @@
             margin-right: 0.857rem
         &__text
             font-weight: bold
+        &__link
+            transition: all 0.3s
+            &:hover
+                transform: scale(1.2)
     .nav
         &__item
             font-weight: bold
@@ -39,4 +43,9 @@
         color: $primary
         text-decoration: none
         font-size: 1.3rem
+        padding: 1.428rem 0
+        transition: all 0.3s
+        &:hover
+            color: $primary
+            border-bottom: 2px solid $blue
     
