--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -582,6 +583,16 @@ input.invalid {
   font-weight: bold;
 }
 
+.header .logo__link {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.header .logo__link:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 .header .nav__item {
   font-weight: bold;
   text-decoration: none;
@@ -606,6 +617,14 @@ input.invalid {
   color: #000000;
   text-decoration: none;
   font-size: 1.3rem;
+  padding: 1.428rem 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.header .phone:hover {
+  color: #000000;
+  border-bottom: 2px solid #0056cf;
 }
 
 .hero {
@@ -1696,10 +1715,19 @@ input.invalid {
 .footer-contacts__item {
   text-decoration: none;
   margin-bottom: 0.5rem;
+  color: #000000;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .footer-contacts__item:last-of-type {
   margin-bottom: 0;
+}
+
+.footer-contacts__item:hover {
+  color: #0842b7;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .footer-links {
@@ -1718,10 +1746,19 @@ input.invalid {
 .footer-links__item {
   text-decoration: none;
   margin-bottom: 0.5rem;
+  color: #000000;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .footer-links__item:last-of-type {
   margin-bottom: 0;
+}
+
+.footer-links__item:hover {
+  color: #0842b7;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .footer-social {
@@ -1742,22 +1779,613 @@ input.invalid {
 
 .footer-social__link:nth-of-type(1) {
   background: url("../img/facbook.svg") no-repeat center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.footer-social__link:nth-of-type(1):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .footer-social__link:nth-of-type(2) {
   background: url("../img/vk.svg") no-repeat center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.footer-social__link:nth-of-type(2):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .footer-social__link:nth-of-type(3) {
   background: url("../img/yt.svg") no-repeat center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.footer-social__link:nth-of-type(3):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .footer-social__link:nth-of-type(4) {
   background: url("../img/inst.svg") no-repeat center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.footer-social__link:nth-of-type(4):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .footer-social__link:nth-of-type(5) {
   background: url("../img/arrow-up.svg") no-repeat center;
   margin-right: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
+
+.footer-social__link:nth-of-type(5):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+/* адаптация */
+.menu-btn {
+  display: none;
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width: 1200px) {
+  .container {
+    padding: 0 2rem;
+  }
+  .hero {
+    background: url(../img/hero-bg.png) no-repeat center top;
+    padding-top: 11.625rem;
+  }
+  .hero-subcontent__title {
+    margin-top: 10rem;
+  }
+  .hero-subcontent__advantages .card-title {
+    font-size: 12.375rem;
+  }
+  .hero .card:nth-of-type(2) {
+    margin-top: 6rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+  .format-card__test {
+    margin-right: 1rem;
+  }
+  .cashback {
+    background: #eaf1f7 url(../img/cashback-bg.png) no-repeat center;
+  }
+  .questions-form__form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .questions .learning-form__input {
+    margin-bottom: 1rem;
+  }
+  .questions .learning-form__button {
+    max-width: 16.6125rem;
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width: 992px) {
+  .header .logo__text {
+    display: none;
+  }
+  .header .contacts__phone {
+    display: none;
+  }
+  .hero__title {
+    font-size: 3.375rem;
+  }
+  .hero__subitile {
+    font-size: 1.2rem;
+  }
+  .hero .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .hero .card:nth-of-type(2) {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .hero .card:nth-of-type(2) .card-text {
+    margin-right: 5.6rem;
+  }
+  .creation-text {
+    max-width: 23.9375rem;
+    text-align: center;
+  }
+  .creation .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .creation .col:nth-of-type(2) {
+    margin-top: 1.4rem;
+  }
+  .creation .col:last-of-type {
+    margin-top: 0.4rem;
+  }
+  .creation .col:last-of-type .creation-data__text {
+    margin-right: 9.3rem;
+  }
+  .creation-data {
+    display: block;
+    margin-bottom: 0;
+    margin-top: 1rem;
+  }
+  .format .cards {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .format-card__test {
+    margin-right: 0;
+    margin-bottom: 1.5rem;
+    padding: 11.375rem 20.375rem 2.75rem 2.75rem;
+  }
+  .format .row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .format .card {
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+  .lessons-number__text {
+    margin-bottom: 2rem;
+  }
+  .lessons-swiper-pagination {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 1.5rem;
+  }
+  .lessons .swiper-pagination {
+    text-align: left;
+  }
+  .lessons .swiper-button-prev {
+    margin-right: 1.5rem;
+  }
+  .lessons .swiper-button-next {
+    margin-left: 0;
+  }
+  .results .section-title--left {
+    margin-bottom: 2rem;
+  }
+  .results-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-below__subtitle {
+    display: none;
+  }
+  .footer-contacts {
+    border-top: none;
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width: 768px) {
+  /* burger-menu */
+  .menu-btn {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    margin-right: 10px;
+    z-index: 4;
+  }
+  .menu-btn__burger {
+    width: 30px;
+    height: 3px;
+    background: #0842b7;
+    border-radius: 5px;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+  }
+  .menu-btn__burger::after,
+  .menu-btn__burger::before {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background: #0842b7;
+    border-radius: 5px;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+  }
+  .menu-btn__burger::before {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  .menu-btn__burger::after {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  .menu-btn.open .menu-btn__burger {
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+    background: transparent;
+  }
+  .menu-btn.open .menu-btn__burger::before {
+    -webkit-transform: rotate(45deg) translate(35px, -35px);
+            transform: rotate(45deg) translate(35px, -35px);
+  }
+  .menu-btn.open .menu-btn__burger::after {
+    -webkit-transform: rotate(-45deg) translate(35px, 35px);
+            transform: rotate(-45deg) translate(35px, 35px);
+  }
+  .section {
+    padding: 70px 0;
+  }
+  .header {
+    position: relative;
+  }
+  .header .logo__text {
+    display: block;
+  }
+  .header .menu__nav {
+    position: absolute;
+    top: -400%;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: white;
+    margin-left: 0;
+    z-index: 2;
+    padding: 180px 0 0 0;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    background: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header .menu__nav.open {
+    top: 0;
+    padding: 12.5rem 0;
+    max-width: 100%;
+    height: 100vh;
+  }
+  .header .menu__nav .nav__item {
+    width: 100%;
+    border-bottom: 1px solid #0842b7;
+    margin-right: 0;
+    text-align: center;
+  }
+  .header .logo {
+    z-index: 4;
+  }
+  .hero {
+    background: #eaf1f7;
+    padding-top: 8.625rem;
+  }
+  .hero__title {
+    font-size: 2.375rem;
+  }
+  .hero__subtitle {
+    font-size: 1.375rem;
+  }
+  .hero__call {
+    margin-bottom: 0;
+  }
+  .hero .call__text {
+    display: none;
+  }
+  .hero-subcontent__title {
+    margin-top: 5rem;
+  }
+  .creation-data {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .creation .col:nth-of-type(2) {
+    margin-top: 1.4rem;
+  }
+  .creation .col:last-of-type {
+    margin-top: 0.4rem;
+  }
+  .creation .col:last-of-type .creation-data__text {
+    margin-right: 0rem;
+  }
+  .benefits {
+    padding: 120px 0;
+    padding-bottom: 24.25rem;
+  }
+  .benefits .swiper-button-next, .benefits .swiper-button-prev {
+    top: 4%;
+  }
+  .benefits .swiper-button-prev__text, .benefits .swiper-button-next__text {
+    display: none;
+  }
+  .benefits .swiper-button-prev, .benefits .swiper-rtl .swiper-button-next {
+    left: 30px;
+    right: auto;
+  }
+  .benefits .swiper-button-next, .benefits .swiper-rtl .swiper-button-prev {
+    right: 30px;
+    left: auto;
+  }
+  .steps-list__item {
+    margin-bottom: 3.125rem;
+  }
+  .format-card__test {
+    padding: 11.375rem 14.375rem 2.75rem 2.75rem;
+  }
+  .format .row {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .format .card {
+    margin-bottom: 1.5rem;
+  }
+  .view {
+    background: url(../img/progress-bg.png) no-repeat bottom/cover;
+  }
+  .view .row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .lessons {
+    display: none;
+  }
+  .advantage-list__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .advantage-list__item {
+    margin-bottom: 1.5rem;
+  }
+  .advantage-list__title {
+    text-align: center;
+  }
+  .prices .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .prices .col-30 {
+    margin-bottom: 1.5rem;
+  }
+  .prices .col-30:nth-of-type(2) .prices-list__item {
+    border: none;
+  }
+  .prices .col-30:nth-of-type(2) .prices-text {
+    margin-bottom: 1.5rem;
+  }
+  .prices .col-30:nth-of-type(3) .prices-text {
+    margin-bottom: 1.5rem;
+  }
+  .prices-text {
+    margin-bottom: 1.5rem;
+  }
+  .results .section-title--left {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .results .section-title__heading {
+    text-align: center;
+  }
+  .results .section-title__subtitle {
+    text-align: center;
+  }
+  .results .row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .results-examples {
+    margin-bottom: 2rem;
+  }
+  .results-examples:last-of-type {
+    margin-bottom: 0;
+  }
+  .prices:nth-last-of-type(2) {
+    display: none;
+  }
+  .footer-upper {
+    display: none;
+  }
+  .footer-contacts {
+    padding-top: 0;
+  }
+  .footer-links {
+    padding-top: 2rem;
+    border: none;
+  }
+  .footer-social {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer-social__link {
+    margin-left: 2rem;
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+}
+
+/* Extra small Devices, Phones */
+@media only screen and (max-width: 480px) {
+  .button {
+    font-size: 1rem;
+  }
+  .section-title__heading {
+    font-size: 1.4rem;
+  }
+  .hero .container {
+    padding-bottom: 0;
+  }
+  .hero__title {
+    font-size: 1.8rem;
+  }
+  .hero__subtitle {
+    font-size: 1.3rem;
+  }
+  .hero-subcontent__advantages .card-title {
+    font-size: 5.375rem;
+  }
+  .hero-subcontent__advantages .percent--strong {
+    font-size: 4rem;
+    margin-left: -1rem;
+  }
+  .creation .col:last-of-type {
+    margin-top: 2.6rem;
+  }
+  .creation-learning__heading {
+    font-size: 1rem;
+  }
+  .benefits {
+    display: none;
+  }
+  .steps__video {
+    display: none;
+  }
+  .format-card {
+    padding: 3.375rem 9.375rem 2.75rem 2.75rem;
+  }
+  .format-card__test {
+    background: url(../img/format1-bg.jpg) no-repeat center/cover;
+  }
+  .format-card__help {
+    background: url(../img/format2-bg.jpg) no-repeat center/cover;
+  }
+  .format .card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
+  .view .card {
+    margin-bottom: 1.8rem;
+  }
+  .view .card__title {
+    margin-bottom: 0.2rem;
+  }
+  .view .card__subtitle {
+    margin-bottom: 0.6rem;
+  }
+  .view .card:last-of-type {
+    margin-bottom: 0;
+  }
+  .advantage {
+    padding-top: 2rem;
+  }
+  .learning-form {
+    padding: 2rem 1rem 2rem;
+  }
+  .learning-form__form {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .learning-form__button {
+    width: auto;
+    max-width: 11.625rem;
+    font-size: 1rem;
+  }
+  .feedback__video {
+    display: none;
+  }
+  .cashback .section-title__heading {
+    font-size: 1rem;
+  }
+  .questions {
+    padding: 2rem 0;
+  }
+  .footer-upper {
+    display: block;
+    margin-bottom: 2rem;
+  }
+  .footer-upper__email {
+    display: none;
+  }
+  .footer-social {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 365px) {
+  #button {
+    right: 10%;
+  }
+}
+
+/* Custom, iPhone Retina */
 /*# sourceMappingURL=style.css.map */
