--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -23,8 +23,13 @@
         &__item
             text-decoration: none
             margin-bottom: 0.5rem
+            color: $primary
+            transition: all 0.3s
             &:last-of-type
                 margin-bottom: 0
+            &:hover
+                color: $darkerBlue
+                transform: scale(1.1)
     &-links
         display: flex
         flex-direction: column
@@ -34,8 +39,13 @@
         &__item
             text-decoration: none
             margin-bottom: 0.5rem
+            color: $primary
+            transition: all 0.3s
             &:last-of-type
                 margin-bottom: 0
+            &:hover
+                color: $darkerBlue
+                transform: scale(1.1)
     &-social
         display: flex
         align-items: center
@@ -45,14 +55,29 @@
             border-radius: 50%
             margin-right: 1rem
             &:nth-of-type(1)
-                background: url('../img/facbook.svg') no-repeat center 
+                background: url('../img/facbook.svg') no-repeat center
+                transition: all 0.3s
+                &:hover
+                    transform: scale(1.2)
             &:nth-of-type(2)
                 background: url('../img/vk.svg') no-repeat center
+                transition: all 0.3s
+                &:hover
+                    transform: scale(1.2)
             &:nth-of-type(3)
                 background: url('../img/yt.svg') no-repeat center
+                transition: all 0.3s
+                &:hover
+                    transform: scale(1.2)
             &:nth-of-type(4)
                 background: url('../img/inst.svg') no-repeat center
+                transition: all 0.3s
+                &:hover
+                    transform: scale(1.2)
             &:nth-of-type(5)
                 background: url('../img/arrow-up.svg') no-repeat center
                 margin-right: 0
+                transition: all 0.3s
+                &:hover
+                    transform: scale(1.2)
                 
